2022-01-18  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/lib/poke-dg.exp (dg-require): Refer to etc/hacking.org
	instead of HACKING.

2022-01-18  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-diag.c (pkl_warning): Honor pkl_quiet_p for warning location.
	(pkl_warning): Do not handle
	pkl_error_on_warning here.
	* libpoke/pkl-anal.c (pkl_anal2_ps_struct_type_field): Do it here.
	(pkl_anal2_ps_type_struct): And here.
	* testsuite/poke.cmd/set-error-on-warning.pk: Do not test error
	case here.
	* testsuite/poke.cmd/set-error-on-warning-diag.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2022-01-17  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-scrabble.pk (scrabble): Move variable declaration up to
	avoid allocation overhead in loop.

2022-01-17  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (Simple Configuration): Renamed from Getting
	Started.

2022-01-17  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (Setting up Hyperlinks): New chapter.

2022-01-17  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/poke-default.css (.setting-integer): New class.
	(.setting-string): Likewise.
	(.setting-boolean): Likewise.
	* poke/pk-settings.pk (pk_settings_dump): Add styling to the
	setting values.
	Add a table header.

2022-01-17  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-settings.pk (pk_settings_dump): Emit a
	Toggling... message in hyperlink actions.

2022-01-17  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-settings.pk: Add documentation for the `endian' setting.

2022-01-17  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/settings-to-texi.pk: New file.
	* doc/Makefile.am (poke_TEXINFOS): Add poke-settings.texi.
	(poke-settings.texi): Rule to enerate poke-settings.texi.
	(MAINTAINERCLEANFILES): Add poke-settings.texi.
	(EXTRA_DIST): Likewise.
	* doc/poke.texi (set command): Include poke-settings.texi.

2022-01-17  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-settings.pk (pk_settings_dump): Avoid allocating a
	local.